--- a/elecpos-web/package.json
+++ b/elecpos-web/package.json
@@ -1,7 +1,7 @@
 {
   "name": "elecpos-web",
   "version": "0.1.0",
- "private": true,
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,11 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.544.0",
     "next": "15.0.3",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
   "engines": {
     "node": ">=18.18"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.13",
+    "@types/node": "24.5.2",
+    "@types/react": "19.1.14",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
+    "typescript": "5.9.2"
   }
 }
