--- a/elecpos-web/package.json
+++ b/elecpos-web/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.58.0",
     "lucide-react": "^0.544.0",
     "next": "15.0.3",
     "react": "18.3.1",
