--- a/elecpos-web/package.json
+++ b/elecpos-web/package.json
@@ -1,31 +1,28 @@
 {
-  "name": "elecpos-web",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+   "engines": {
+    "node": "20.x"
   },
   "dependencies": {
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
-    "@supabase/supabase-js": "^2.58.0",
-    "lucide-react": "^0.544.0",
+    "@hookform/resolvers": "5.2.2",
+    "clsx": "2.1.1",
+    "jszip": "3.10.1",
     "next": "15.0.3",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "swr": "2.3.6",
+    "tailwind-merge": "2.6.0",
+    "zod": "4.1.11"
   },
-  "engines": {
-    "node": ">=18.18"
+   "scripts": {
+    "dev": "next dev -p 3000",
+    "build": "next build",
+    "start": "next start -p 3000"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.13",
-    "@types/node": "24.5.2",
-    "@types/react": "19.1.14",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
-    "typescript": "5.9.2"
+    "@tailwindcss/postcss": "^4.1.14",
+    "@types/react": "19.1.17",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13"
   }
 }
