--- a/elecpos-web/tsconfig.json
+++ b/elecpos-web/tsconfig.json
@@ -1,29 +1,30 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ES2022",
     "lib": [
-      "ES2021",
       "DOM",
-      "DOM.Iterable"
+      "ES2022"
     ],
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "jsx": "preserve",
-    "baseUrl": "src",
+    "strict": true,
+    "noEmit": true,
+    "allowJs": false,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "baseUrl": ".",
     "paths": {
       "@/*": [
-        "*"
+        "src/*"
       ]
     },
-    "strict": true,
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
+    "types": [
+      "node"
+    ],
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "allowJs": true,
-    "noEmit": true,
     "incremental": true,
-    "isolatedModules": true,
+    "esModuleInterop": true,
     "plugins": [
       {
         "name": "next"
@@ -31,9 +32,8 @@
     ]
   },
   "include": [
-    "**/*.ts",
-    "**/*.tsx",
     "next-env.d.ts",
+    "src/**/*",
     ".next/types/**/*.ts"
   ],
   "exclude": [
