--- a/elecpos-web/package.json
+++ b/elecpos-web/package.json
@@ -6,7 +6,7 @@
       "@hookform/resolvers": "5.2.2",
       "clsx": "2.1.1",
       "jszip": "3.10.1",
-      "next": "15.0.3",
+      "next": "^15.5.4",
       "react": "18.3.1",
       "react-dom": "18.3.1",
       "swr": "2.3.6",
